# deepsort_ros

./: .gitignore  README.md  package.xml  setup.cfg
deep_sort/: detection.py  track.py  tracker.py
deepsort_ros/: tracker_node.py
