[metadata]
name = deepsort_ros
version = 0.0.0
maintainer = Anand Balakrishnan
license = GPLv3

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
  setuptools
install_requires =
  numpy
  scikit-learn
  opencv-python

[options.entry_points]
console_scripts =
  tracker = deepsort_ros.tracker_node:main

[options.data_files]
share/ament_index/resource_index/packages =
  resource/deepsort_ros
share/deepsort_ros =
  package.xml

[develop]
script-dir = $base/lib/deepsort_ros

[install]
install-scripts = $base/lib/deepsort_ros
