[metadata]
name = deepsort_ros
version = 0.0.0
maintainer = Anand Balakrishnan
license = GPLv3

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
  setuptools
install_requires =
  numpy
  scikit-learn
  opencv-python

[options.entry_points]
console_scripts =
  tracker = deepsort_ros.tracker_node:main

[options.data_files]
share/ament_index/resource_index/packages =
  resource/deepsort_ros
share/deepsort_ros =
  package.xml

[develop]
script-dir = $base/lib/deepsort_ros

[install]
install-scripts = $base/lib/deepsort_ros

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[flake8]
max-line-length = 88
ignore = E501, E203, W503
per-file-ignores = __init__.py:F401
exclude =
    .git
    __pycache__
    build
    dist
    releases
    .venv
    .tox
    .mypy_cache
    .pytest_cache

[mypy]
check_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
strict_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
